[tool.poetry]
name = "critical-images"
version = "0.1.0"
description = ""
authors = ["Thomas Seidler <thomas.seidler@ambrosys.de>"]
readme = "README.md"
packages = [{include="critical_images", from="src"}]

[tool.poetry.dependencies]
python = "~3.10"
mantik = {extras = ["mlflow"], version = "^0.5.0"}
vit-keras = "^0.1.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
