[tool.poetry]
name = "critical-images"
version = "0.1.0"
description = ""
authors = ["Thomas Seidler <thomas.seidler@ambrosys.de>"]
readme = "README.md"
packages = [{include="critical_images", from="src"}]

[tool.poetry.dependencies]
python = "~3.10"
mantik = {extras = ["mlflow"], version = "^0.5.0"}
vit-keras = "^0.1.2"
numpy = "^1.26.4"
tensorflow-addons = "^0.23.0"
tensorflow = "2.15.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.9.0"
tensorflow-datasets = "^4.9.4"
pandas = "^2.2.2"


[tool.poetry.group.development.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
